--- a/styles/styling1.css
+++ b/styles/styling1.css
@@ -1,10 +1,11 @@
 * {
-    font-family: Roboto Mono;
+    font-family: "Arial";
+    font-weight: bold;
     user-select: none;
 }
 
 body {
-    background-color: #0d0221;
+    background-color: white;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -12,7 +13,7 @@ body {
 }
 
 .nav-bar {
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 10px;
     display: flex;
     gap: 20px;
@@ -22,21 +23,23 @@ body {
 }
 
 .nav-bar-item {
-    color: white;
     transition: 100ms ease;
     font-weight: bold;
-    background-color: #3280fc;
+    background-color: #1a4999;
     padding: 5px;
     border-radius: 5px;
 }
 
 a {
-    color: white;
-    text-decoration: none;
+    color: black;
 }
 
 p {
-    color: #05fcb6;
+    color: #1a4999;
+}
+
+.textdecnon{
+  text-decoration: none;
 }
 
 .lg {
@@ -55,6 +58,19 @@ p {
     transform: scale(1.1);
 }
 
+.colorwhite{
+  color: white;
+}
+
+.colorblack{
+  color: #003366;
+}
+
 h1 {
-    color: white;
+    color: #003366;
+    transition: 0.5s ease;
+}
+
+h1:hover{
+  transform: scale(1.08);
 }
