--- a/styles/styling2.css
+++ b/styles/styling2.css
@@ -1,19 +1,19 @@
 *{
-    font-family: Roboto Mono;
+    font-family: "Arial";
     user-select: none;
-    color: white;
+    color: #003366;
 }
 
 body{
-    background-color: #0D0221;
+    background-color: white;
     text-align: center;
 }
 
 .card{
     font-size: smaller;
     width: 300px;
-    height: 290px;
-    border: 1px solid #05fcb6;
+    height: 300px;
+    border: 1px solid black;
     padding: 5px;
     margin: 5px;
     display: flex;
