--- a/styles/styling4.css
+++ b/styles/styling4.css
@@ -1,15 +1,16 @@
 *{
-    font-family: Roboto Mono;
+    font-family: Arial;
     user-select: none;
-    color: white;
+    color: #003366;
 }
 
 body{
-    background-color: #0D0221;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 
 .cert{
     display: block;
@@ -22,4 +23,8 @@ body{
     margin: 6px;
     width: 400px;
     text-align: center;
+}
+
+.cert *{
+  color: white;
 }
