--- a/styles/styling5.css
+++ b/styles/styling5.css
@@ -1,11 +1,11 @@
 *{
-    font-family: Roboto Mono;
+    font-family: Arial;
     user-select: none;
-    color: white;
+    color: #003366;
 }
 
 body{
-    background-color: #0D0221;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +19,8 @@ a{
     margin: 4px;
     border-radius: 5px;
     text-decoration: none;
+    font-size: 1.4rem;
     font-weight: bold;
+    color: white;
 }
 
