--- a/styles/styling6.css
+++ b/styles/styling6.css
@@ -1,12 +1,12 @@
 *{
-    font-family: Roboto Mono;
+    font-family: Arial ;
     user-select: none;
-    color: white;
+    color: #003366;
     margin-left: 5px;
 }
 
 body{
-    background-color: #0D0221;
+    background-color: white;
 }
 
 a{
@@ -21,5 +21,5 @@ a{
 }
 
 h1{
-    color: #05fcb6;
+    color: #003366;
 }
